[package]
name = "path_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doryen-rs = "1.2.0"
image = "0.24.5"
tokio= { version ="1", features = [ "full" ] }
hyper= { version = "0.14.25", features = [ "http1", "tcp", "server", "runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
